<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:backgroundTint="#00000000"
    tools:context=".MainActivity">

    <!-- Text View to display our basic heading of "calculator"-->

    <Button
        android:id="@+id/fibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="104dp"
        android:text="fibonacci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/factorial"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:text="factorial"
        app:layout_constraintEnd_toStartOf="@+id/fibonacci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="39dp"
        android:scrollbarSize="30dp"
        android:text="Calculadora Simple"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="30dp"
        android:text="Número 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="364dp"
        android:layout_height="28dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="26dp"
        android:background="#DAD9D9"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="30dp"
        android:text="Número 2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <!-- Edit Text View to input the values -->

    <!-- Edit Text View to input 2nd value-->

    <!-- Text View to display result -->

    <EditText
        android:id="@+id/num2"
        android:layout_width="364dp"
        android:layout_height="28dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="26dp"
        android:background="#DAD9D9"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="108dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:text="+"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:text="/"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/subtract" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:text="*"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/result"
        android:layout_width="281dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="140dp"
        android:background="#DAD9D9"
        android:textColor="#000000"
        android:textColorLink="#673AB7"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fibonacci" />

    <Button
        android:id="@+id/mainHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="72dp"
        android:text="Historial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- A button to perform 'sum' operation -->

    <!-- A button to perform subtraction operation. -->

    <!-- A button to perform division. -->

    <!-- A button to perform multiplication. -->

    <!-- A button to perform a modulus function. -->

    <!-- A button to perform a power function. -->

</androidx.constraintlayout.widget.ConstraintLayout>
