...
        android:id="@+id/mainClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="72dp"
        android:text="Limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainActivity" />

    <TextView
        android:id="@+id/historyResult"
...
